[package]
name = "midnight-primitives-beefy"
version = "0.1.0"
edition = "2024"
description = "Midnight Beefy Primitives"
license-file.workspace = true


[dependencies]
log.workspace = true
parity-scale-codec.workspace = true

pallet-beefy.workspace = true
pallet-beefy-mmr.workspace = true
pallet-mmr.workspace = true

sp-api.workspace = true
sp-consensus-beefy.workspace = true 
sp-runtime.workspace = true
sp-std.workspace = true

pallet-session-validator-management.workspace = true


[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "pallet-beefy/std",
    "pallet-beefy-mmr/std",
    "pallet-mmr/std",
    "sp-api/std",
    "sp-consensus-beefy/std",
    "sp-runtime/std",
    "sp-std/std",
    
    "pallet-session-validator-management/std"
]