load("@rules_rust//rust:defs.bzl", "rust_library")

exports_files(["Cargo.toml"])

rust_library(
    name = "midnight-primitives-cnight-observation",
    srcs = glob(["src/**/*.rs"]),
    compile_data = ["Cargo.toml"],
    crate_features = ["std"],
    edition = "2024",
    deps = [
        "@crates//:frame-support",
        "@crates//:hex",
        "@crates//:parity-scale-codec",
        "@crates//:scale-info",
        "@crates//:serde",
        "@crates//:serde_valid",
        "@crates//:sidechain-domain",
        "@crates//:sp-api",
        "@crates//:sp-inherents",
        "@crates//:sqlx",
        "@crates//:thiserror",
    ],
    visibility = ["//visibility:public"],
)
