load("@rules_rust//rust:defs.bzl", "rust_library")
load("//:defs.bzl", "native_only_crates", "wasm_aware_crates", "wasm_aware_features")

exports_files(["Cargo.toml"])

rust_library(
    name = "midnight-primitives-cnight-observation",
    srcs = glob(["src/**/*.rs"]),
    compile_data = ["Cargo.toml"],
    crate_features = wasm_aware_features(["std"]),
    edition = "2024",
    deps = wasm_aware_crates([
        "frame-support",
        "hex",
        "parity-scale-codec",
        "scale-info",
        "serde",
        "sidechain-domain",
        "sp-api",
        "sp-inherents",
    ]) + native_only_crates([
        "serde_valid",
        "sqlx",
        "thiserror",
    ]),
    visibility = ["//visibility:public"],
)
