load("@rules_rust//rust:defs.bzl", "rust_library")
load("//:defs.bzl", "native_only_crates", "wasm_aware_crates", "wasm_aware_features")

exports_files(["Cargo.toml"])

rust_library(
    name = "midnight-primitives-federated-authority-observation",
    srcs = glob(["src/**/*.rs"]),
    crate_features = wasm_aware_features(["std"]),
    edition = "2024",
    deps = wasm_aware_crates([
        "hex",
        "parity-scale-codec",
        "scale-info",
        "serde",
        "sidechain-domain",
        "sp-api",
        "sp-core",
        "sp-inherents",
        "sp-runtime",
    ]) + native_only_crates([
        "serde_valid",
    ]),
    visibility = ["//visibility:public"],
)
