load("@rules_rust//rust:defs.bzl", "rust_library")

exports_files(["Cargo.toml"])

rust_library(
    name = "midnight-primitives-ics-observation",
    srcs = glob(["src/**/*.rs"]),
    crate_features = ["std"],
    edition = "2024",
    deps = [
        "@crates//:serde",
        "@crates//:sidechain-domain",
        "@crates//:thiserror",
    ],
    visibility = ["//visibility:public"],
)
