load("@rules_rust//rust:defs.bzl", "rust_library")
load("//:defs.bzl", "native_only_crates", "wasm_aware_crates")

exports_files(["Cargo.toml"])

rust_library(
    name = "midnight-primitives-ledger",
    srcs = glob(["src/**/*.rs"]),
    edition = "2024",
    aliases = select({
        "//:wasm32": {},
        "//conditions:default": {
            "@crates//:substrate-prometheus-endpoint-0.17.7": "prometheus_endpoint",
        },
    }),
    deps = wasm_aware_crates([
        "log",
        "sp-externalities",
    ]) + native_only_crates([
        "substrate-prometheus-endpoint-0.17.7",
    ]),
    visibility = ["//visibility:public"],
)
